samples/_failures_safe/1761082165_d0c3c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f883f142.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_f883f142.c:169:12: error: missing terminating " character
  169 |     printf("----\t
      |            ^~~~~~~
./samples/SAFE/__tmp_f883f142.c:169:5: error: expected expression at end of input
  169 |     printf("----\t
      |     ^~~~~~
./samples/SAFE/__tmp_f883f142.c:169:5: error: expected declaration or statement at end of input
